...
  @override
  State<accountCreation> createState() => accountCreationState();
}

class accountCreationState extends State<accountCreation> {
  final List<String> currencies = [     //slanje na backend rade samo BAM, USD, EUR, CHF
    'USD',
    'AUD',
    'BRL',
    'CAD',
    'CHF',
    'CZK',
    'DKK',
...
        headers: <String, String>{
          'Content-Type': 'application/json; charset=UTF-8',
          'Authorization': 'Bearer $token'
        },
        body: jsonEncode(<String, String>{
          "currencyId": "$currencyId",
          "description": descController.text,  //staviti controller
          "requestDocumentPath": filePath.toString(),  //
          "userId": "$userId"
        }));
    var response = json.decode(res.body);
    //print(response.toString());
    print(res.statusCode);
...
  @override
  Widget build(BuildContext context) {
    return MaterialApp(
      debugShowCheckedModeBanner: false,
      home: Scaffold(
        appBar: AppBar(
          title: const Text("Account Creation"),
          centerTitle: true,
          leading: BackButton(
            onPressed: () => Navigator.of(context).pop(),
          ),
        ),
        body: SingleChildScrollView(
...

              ),
              const Padding(
                padding: EdgeInsets.only(top: 40),
                child: SizedBox(
                  width: 350,
                  child: Text('Currency'),
                ),
              ),
              Padding(
                padding: EdgeInsets.symmetric(horizontal: 20),
                child: DropdownButtonFormField<String>(
                  value: selectedCurrency,
...
                    ),
                  ],
                ),
              ),
              ElevatedButton(
                  onPressed: accountCreationRequest,
                  child: Text("SUBMIT")
              ),
              ElevatedButton(
                  onPressed: uploadFile,
                  child: Row(
                      mainAxisSize: MainAxisSize.min,
                      children: [
...
