...
          centerTitle: true,
          leading: BackButton(
            onPressed: () => Navigator.of(context).pop(),
          ),
        ),
        body: SingleChildScrollView(
          key: const ValueKey('Container'),
          child: Column(
            mainAxisAlignment: MainAxisAlignment.center,
            crossAxisAlignment: CrossAxisAlignment.center,
            children: [
              const Padding(
                padding: EdgeInsets.only(top: 80),
...
                padding: const EdgeInsets.symmetric(vertical: 20),
                child: Column(
                  children: [
                    Padding(
                      padding: const EdgeInsets.symmetric(horizontal: 20),
                      child: TextFormField(
                        key: const ValueKey('EmailField'),
                        //controller: _controllers[0],
                        controller: _emailController,
                        keyboardType: TextInputType.emailAddress,
                        decoration:
                            registerInputDecoration("Email", "Enter Email"),
                        onFieldSubmitted: (String value) {
...
                  key: _formkey,
                  child: Column(
                    children: [
                      Padding(
                        padding: const EdgeInsets.symmetric(horizontal: 20),
                        child: TextFormField(
                          key: const ValueKey('PasswordField'),
                          controller: _passwordController,
                          obscureText: true,
                          keyboardType: TextInputType.emailAddress,
                          decoration: registerInputDecoration(
                              "Password", "Enter password"),
                          onFieldSubmitted: (String value) {
...
              const SizedBox(
                height: 20,
              ),
              Padding(
                padding: const EdgeInsets.symmetric(horizontal: 100),
                child: MaterialButton(
                  key: const ValueKey('loginbutton'),
                  elevation: 10,
                  height: 50,
                  minWidth: double.infinity,
                  onPressed: () {
                    logInRequest(
                        _emailController.text, _passwordController.text);
                    print(
                        _emailController.text + " " + _passwordController.text);
                  },
                  color: Colors.blue,
                  child: const Text("LOGIN",
                      style: TextStyle(
                        fontSize: 20,
                        color: Colors.white,
                        fontWeight: FontWeight.bold,
                      )),
                ),
...
